---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE OR REPLACE FUNCTION getfoo() RETURNS text AS $$SELECT name FROM \\\"users\\\" LIMIT 1$$ LANGUAGE sql IMMUTABLE CALLED ON NULL INPUT;"
---
CreateFunctionStmt@0..135
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Or@7..9 "OR"
  Whitespace@9..10 " "
  Replace@10..17 "REPLACE"
  Whitespace@17..18 " "
  Function@18..26 "FUNCTION"
  Whitespace@26..27 " "
  Ident@27..33 "getfoo"
  Ascii40@33..34 "("
  Ascii41@34..35 ")"
  Whitespace@35..36 " "
  Returns@36..43 "RETURNS"
  Whitespace@43..44 " "
  TypeName@44..48
    TextP@44..48 "text"
  Whitespace@48..49 " "
  DefElem@49..90
    As@49..51 "AS"
    Whitespace@51..52 " "
    List@52..90
      Sconst@52..90 "$$SELECT name FROM \\\" ..."
  Whitespace@90..91 " "
  DefElem@91..103
    Language@91..99 "LANGUAGE"
    Whitespace@99..100 " "
    SqlP@100..103 "sql"
  Whitespace@103..104 " "
  DefElem@104..113
    Immutable@104..113 "IMMUTABLE"
  Whitespace@113..114 " "
  DefElem@114..120
    Called@114..120 "CALLED"
  Whitespace@120..121 " "
  On@121..123 "ON"
  Whitespace@123..124 " "
  NullP@124..128 "NULL"
  Whitespace@128..129 " "
  InputP@129..134 "INPUT"
  Ascii59@134..135 ";"

